[build-system]
name = "solver-multiRPC"
version = "3.0.0"
requires = [
    "setuptools>=42",
    "wheel"
]
dependencies = [
    "web3>=6.0.0",
    "multicallable>=6.0.0",
    "eth-account>=0.12.2",
    "logmon @ git+https://zxcode.xyz/pub/logmon.git@73c1bfe9",
]
build-backend = "setuptools.build_meta"